--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="potrtfolio">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
+  <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
